Fixed scrolling bug on iOS & created new build

--- a/app/styles/modules/_gallery.scss
+++ b/app/styles/modules/_gallery.scss
@@ -27,6 +27,7 @@
 }
 
 .main {
+	-webkit-overflow-scrolling: touch;
     overflow: auto;
 
     article.row {
